--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,4 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: devopsapp/expressapp:latest
+        tags: farcryer2/expressapp:latest
