--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,8 @@ services:
       - 8080:8080
 
   watchtower:
-    image: containrrr/watchtower
-    environment:
-      -  WATCHTOWER_POLL_INTERVAL=60 # Poll every 60 seconds
+    image: containrrr/watchtower    
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     container_name: watchtower
+    command: --interval 60 expressapp
